Implement Community Channel option: view channel members and details

--- a/translations/en.json
+++ b/translations/en.json
@@ -1493,7 +1493,7 @@
     "view-gitcoin": "View in Gitcoin",
     "view-members": "View members",
     "view-profile": "View profile",
-    "view-channel-members-and-details": "View channel member and details",
+    "view-channel-members-and-details": "View channel members and details",
     "view-details": "View Details",
     "view-signing": "View signing phrase",
     "view-superrare": "View in SuperRare",
