feat: update transaction confirmation page to support bridging transactions

--- a/translations/en.json
+++ b/translations/en.json
@@ -2519,5 +2519,7 @@
     "keypair-name": "Keypair name",
     "keypair-name-description": "Name keypair for your own personal reference",
     "keypair-name-input-placeholder": "Collectibles account, Old vault....",
-    "goerli-testnet-toggle-confirmation": "Are you sure you want to toggle Goerli? This will log you out and you will have to login again."
+    "goerli-testnet-toggle-confirmation": "Are you sure you want to toggle Goerli? This will log you out and you will have to login again.",
+    "bridged-to": "Bridged to {{network}}",
+    "slide-to-bridge": "Slide to bridge"
 }
