--- a/translations/en.json
+++ b/translations/en.json
@@ -69,6 +69,7 @@
     "bio": "Bio",
     "bio-added": "Bio added",
     "bio-is-too-long": "Bio is too long",
+    "bio-updated": "Bio updated",
     "biometric-auth-android-sensor-desc": "Touch sensor",
     "biometric-auth-android-sensor-error-desc": "Failed",
     "biometric-auth-android-title": "Authentication Required",
