fix: same placeholder for chat & community pins
Signed-off-by: Cristian Lungu <lungucristian95@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -2053,8 +2053,7 @@
     "you-must-always-hold": "You must always hold:",
     "shell-placeholder-title": "Your open tabs will be here",
     "shell-placeholder-subtitle": "Jump between your communities, messages,\nwallet accounts and browser tabs",
-    "no-pinned-messages-desc": "This chat doesn’t have any\npinned messages.",
-    "no-pinned-messages-community-desc": "Just keep pinning, just keep pinning \nWhat do we do? We pin, pin, pin",
+    "no-pinned-messages-desc": "Just keep pinning, just keep pinning \nWhat do we do? We pin, pin, pin",
     "invite-friends-to-status": "Invite friends to Status",
     "share-invite-link": "Share an invite link",
     "pending-requests": "Pending requests",
