--- a/translations/en.json
+++ b/translations/en.json
@@ -2517,5 +2517,6 @@
     "generating-keypair": "Generating keypair...",
     "keypair-name": "Keypair name",
     "keypair-name-description": "Name keypair for your own personal reference",
-    "keypair-name-input-placeholder": "Collectibles account, Old vault...."
+    "keypair-name-input-placeholder": "Collectibles account, Old vault....",
+    "goerli-testnet-toggle-confirmation": "Are you sure you want to toggle Goerli? This will log you out and you will have to login again."
 }
