🚧 Save address UI reached teenage years

--- a/translations/en.json
+++ b/translations/en.json
@@ -1249,6 +1249,7 @@
     "reveal-sync-code": "Reveal sync code",
     "revoke-access": "Revoke access",
     "save": "Save",
+    "save-address": "Save address",
     "save-bio": "Save bio",
     "save-colour": "Save colour",
     "save-name": "Save name",
