[#18963] feat: actions UI for stranger contact profile

--- a/translations/en.json
+++ b/translations/en.json
@@ -2063,7 +2063,7 @@
     "and": "and",
     "rename": "Rename",
     "mark-untrustworthy": "Mark as Untrustworthy",
-    "block-user": "Block User",
+    "block-user": "Block user",
     "group-details": "Group details",
     "edit-name-and-image": "Edit name and image",
     "change-group-privacy": "Change group privacy",
