chore: add send-contact-request to i18n translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -1978,6 +1978,7 @@
     "new-ui": "New UI",
     "send-contact-request-message": "To start a chat you need to become contacts",
     "contact-request": "Contact request",
+    "send-contact-request": "Send contact request",
     "contact-request-sent-to": "Contact request sent to",
     "contact-request-was-accepted": "Contact request accepted",
     "contact-request-is-now-a-contact": "is now a contact",
