--- a/translations/en.json
+++ b/translations/en.json
@@ -2116,6 +2116,7 @@
     "selected-count-from-max": "{{selected}}/{{max}}",
     "online": "Online",
     "contact-request-chat-pending": "Your contact request is pending",
+    "contact-profile-request-pending": "Contact request pending",
     "contact-request-chat-add": "Add {{name}} as contact to send a message",
     "join-request": "Join request",
     "join-one-user": "Join {{user}}",
