Allow user to select a color for the group chat #18982

--- a/translations/en.json
+++ b/translations/en.json
@@ -312,6 +312,7 @@
     "create-a-pin": "Create a 6-digit passcode",
     "create-a-puk": "Create a 12-digit PUK",
     "create-group-chat": "Create group chat",
+    "name-your-group": "Name your group",
     "create-multiaccount": "Generate keys",
     "create-new-key": "Get new keys",
     "create-pin": "Create 6-digit passcode",
@@ -2411,6 +2412,7 @@
     "no-other-accounts": "No other accounts",
     "here-is-a-cat-in-a-box-instead": "Here’s a cat in a box instead",
     "accounts-count": "{{count}} accounts",
+    "n-m-people": "{{n}}/{{m}} people",
     "enter-eth": "Enter any ETH address or ENS name.",
     "eth-or-ens": "ETH address or ENS name.",
     "type-pairing-code": "Type or paste pairing code",
