[#19037] feat: new design for manage nickname

--- a/translations/en.json
+++ b/translations/en.json
@@ -1652,12 +1652,16 @@
     "page-would-like-to-use-camera": "would like to use your camera",
     "page-camera-request-blocked": "camera requests blocked. To enable camera requests go to Settings",
     "nickname": "Nickname",
+    "nickname-is-too-long": "Nickname is too long",
     "add-nickname": "Add a nickname (optional)",
     "edit-nickname": "Edit nickname",
     "add-nickname-title": "Add nickname",
     "nickname-visible-to-you": "Nickname will only be visible to you",
     "type-nickname": "Type nickname",
     "remove-nickname": "Remove nickname",
+    "nickname-removed": "Nickname removed",
+    "nickname-added": "Nickname for {{primary-name}} added",
+    "nickname-updated": "Nickname for {{primary-name}} updated",
     "set-nickname-toast": "You have renamed {{primary-name}} as {{nickname}}",
     "remove-nickname-toast": "You have removed {{secondary-name}}'s nickname",
     "nickname-description": "Nicknames help you identify others in Status.\nOnly you can see the nicknames you’ve added",
