--- a/translations/en.json
+++ b/translations/en.json
@@ -1666,6 +1666,7 @@
     "remove-nickname-toast": "You have removed {{secondary-name}}'s nickname",
     "nickname-description": "Nicknames help you identify others in Status.\nOnly you can see the nicknames you’ve added",
     "accept": "Accept",
+    "ignore": "Ignore",
     "group-invite": "Group invite",
     "group-invite-link": "Group invite link",
     "pending-invitations": "Pending membership requests",
