--- a/translations/en.json
+++ b/translations/en.json
@@ -2277,6 +2277,19 @@
     "sync-devices-complete-title": "Device sync complete!",
     "sync-devices-complete-sub-title": "Your devices are now in sync",
     "synced-with": "Synced with",
+    "confirm-and-leave": "Confirm and leave",
+    "membership-requirements-not-met": "Membership requirements not met",
+    "edit-shared-addresses": "Edit shared addresses",
+    "leave-community-farewell": "We’ll be sad to see you go but remember, you can come back at any time! All shared addresses will be unshared.",
+    "pending-join-request-farewell": "We’ll be sad to see you go but remember, you can request to join this community at any point. All shared addresses will be unshared.",
+    "all-changes-will-be-discarded": "All changes in shared addresses for permissions will be discarded.",
+    "cancel-request": "Cancel request",
+    "discard": "Discard",
+    "discard-changes?": "Discard changes?",
+    "confirm-and-cancel": "Confirm and cancel",
+    "you-will-be-a": "You’ll be a",
+    "you-are-a": "You’re a",
+    "you-are-a-role": "You’re a {{role}}",
     "you-eligible-to-join": "You’re eligible to join",
     "you-eligible-to-join-as": "You’re eligible to join as {{role}}",
     "eligible-to-join-as": "Eligible to join as",
