feat: added change-password screen
Signed-off-by: Lungu Cristian <lungucristian95@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -146,6 +146,12 @@
     "change-logging-enabled": "Are you sure you want to {{enable}} logging?",
     "change-passcode": "Change Passcode",
     "change-password": "Change password",
+    "change-password-description": "Change password used to log in to Status and sign transactions",
+    "change-password-new-password-label": "New password",
+    "change-password-new-password-placeholder": "Enter new password",
+    "change-password-old-password-label": "Current password",
+    "change-password-old-password-placeholder": "Enter current password",
+    "change-password-repeat-password-placeholder": "Repeat new password",
     "change-pin": "Change 6-digit passcode",
     "change-puk": "Change 12-digit PUK",
     "change-pairing": "Change pairing code",
