chore: add english translation for "contact request ignored"

--- a/translations/en.json
+++ b/translations/en.json
@@ -1979,6 +1979,7 @@
     "contact-request-was-sent": "Contact request sent",
     "contact-request-sent-to": "Contact request sent to",
     "contact-request-was-accepted": "Contact request accepted",
+    "contact-request-was-ignored": "Contact request ignored",
     "contact-request-is-now-a-contact": "is now a contact",
     "contact-request-removed-you-as-contact": "removed you as a contact",
     "contact-request-removed-as-contact": "removed as a contact",
