Implement reviewal of contact requests from contact profile (#19119)
* chore: add english translation for contact-request-review

* feature: integrate contact-request-review button

* tweak: render the locked-input label when provided

* tweak: allow locked-input component to grow in height

* chore: add english translation for "ignore"

* feature: add subscription for retrieving a pending contact-request by contact-id

* feature: integrate initial contact request review flow

* tweak: display send-message button on contact profile when contact-request-state is mutual

* tidy: refactor button-wrapper view to be button container-styles

* feature: add toast for accepting contact request

--- a/translations/en.json
+++ b/translations/en.json
@@ -1666,6 +1666,7 @@
     "remove-nickname-toast": "You have removed {{secondary-name}}'s nickname",
     "nickname-description": "Nicknames help you identify others in Status.\nOnly you can see the nicknames you’ve added",
     "accept": "Accept",
+    "ignore": "Ignore",
     "group-invite": "Group invite",
     "group-invite-link": "Group invite link",
     "pending-invitations": "Pending membership requests",
@@ -1986,6 +1987,7 @@
     "accepted": "Accepted",
     "declined": "Declined",
     "contact-request-sent": "sent contact request",
+    "contact-request-review": "Review contact request",
     "contact-request-sent-toast": "{{name}} sent you a contact request",
     "contact-request-accepted-toast": "{{name}} accepted your contact request",
     "contact-request-outgoing": "You’re trying to connect with",
