Fix translations and placeholders

--- a/translations/en.json
+++ b/translations/en.json
@@ -446,8 +446,8 @@
     "decline": "Decline",
     "decryption-failed-content": "An error occured decrypting your data. You might need to erase your old data and generate a new account. Tap “Apply” to erase or “Cancel” to try again",
     "default": "Default",
-    "default-account-placeholder": "Account {{number}}",
-    "default-watched-address-placeholder": "Watched address {{number}}",
+    "default-account-placeholder": "Account",
+    "default-watched-address-placeholder": "Watched address",
     "delete": "Delete",
     "delete-and-leave-group": "Delete and leave group",
     "delete-bootnode": "Delete bootnode",
