feat: added changing password with confirmation and loading
Signed-off-by: Lungu Cristian <lungucristian95@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -146,6 +146,8 @@
     "change-logging-enabled": "Are you sure you want to {{enable}} logging?",
     "change-passcode": "Change Passcode",
     "change-password": "Change password",
+    "change-password-confirm-description": "Your data must now be re-encrypted with your new password. Please do not quit the app or turn off your device.",
+    "change-password-confirm-warning": "This process may take up to 3 min. Closing the app or locking your phone while re-encryption is taking place will lead to data corruption, loss of your Status profile and inability to restart Status.",
     "change-password-description": "Change password used to log in to Status and sign transactions",
     "change-password-new-password-label": "New password",
     "change-password-new-password-placeholder": "Enter new password",
@@ -1214,7 +1216,9 @@
     "puk-mismatch": "Wrong PUK code",
     "quiet-days": "{{quiet-days}} days",
     "quiet-hours": "{{quiet-hours}} hours",
+    "re-encrypt": "Re-encrypt",
     "re-encrypt-key": "Re-encrypt your keys",
+    "re-encrypt-data": "Re-encrypt your data",
     "receive": "Receive",
     "receive-transaction": "Receive transaction",
     "recent": "Recent",
