[#19132] feat: block contact with remove contact checkbox

--- a/translations/en.json
+++ b/translations/en.json
@@ -94,6 +94,8 @@
     "blank-keycard-text": "You can proceed with your keycard once you've generated your keys and name",
     "blank-keycard-title": "Looks like you’ve tapped \na blank keycard",
     "block": "Block",
+    "user-blocked": "{{username}} blocked",
+    "user-unblocked": "{{username}} unblocked",
     "unblock": "Unblock",
     "block-contact": "Block this user",
     "block-contact-details": "Blocking will delete this user's previous messages and stop new ones from reaching you",
@@ -1222,6 +1224,7 @@
     "remember-me": "Remember me",
     "remind-me-later": "Show me this again",
     "remove": "Remove",
+    "remove-contact": "Remove contact",
     "remove-from-chat": "Remove from chat",
     "remove-from-contacts": "Remove from contacts",
     "remove-contact": "Remove contact",
@@ -2065,6 +2068,8 @@
     "rename": "Rename",
     "mark-untrustworthy": "Mark as Untrustworthy",
     "block-user": "Block user",
+    "block-user-title-message": "You will not see {{username}}'s messages, but {{username}} still can see your messages in mutual group chats and communities. {{username}} will be unable to message you.",
+    "blocking-a-user-message": "Blocking a user purges the database of all messages that you’ve previously received from {{username}} in all contexts.",
     "group-details": "Group details",
     "edit-name-and-image": "Edit name and image",
     "change-group-privacy": "Change group privacy",
