❄️ Fix json indent

--- a/translations/en.json
+++ b/translations/en.json
@@ -14,6 +14,7 @@
     "account-color": "Account color",
     "added-to-group-chat": "Added to group chat",
     "added-you-to": "added you to",
+    "address-name": "Address name",
     "anyone": "Anyone",
     "messages-from-contacts-only-subtitle": "Only people you added as contacts can start a new chat with you or invite you to a group",
     "messages-gap-warning": "Some messages might be missing",
@@ -33,6 +34,7 @@
     "add-custom-token": "Add custom token",
     "add-mailserver": "Add Status node",
     "add-members": "Add members",
+    "add-network": "Add network",
     "add-node": "Add node",
     "add-to-contacts": "Add to contacts",
     "add-to-contacts-text": "By adding a user to your contact list, you share your wallet address",
@@ -402,6 +404,7 @@
     "current-pin": "Enter 6-digit passcode",
     "current-pin-description": "Enter your 6-digit passcode to proceed",
     "custom": "Custom",
+    "custom-networks": "Custom networks",
     "dapp": "ÐApp",
     "dapp-would-like-to-connect-wallet": "would like to connect to",
     "dapps": "dApps",
@@ -662,6 +665,7 @@
     "get-stickers": "Get Stickers",
     "gif": "GIF",
     "go-to-settings": "Go to Settings...",
+    "goerli-network": "Goerli network",
     "got-it": "Got it",
     "group-chat": "Group chat",
     "group-chat-admin": "Admin",
@@ -917,6 +921,7 @@
     "main-currency": "Main currency",
     "main-networks": "Main networks",
     "main-wallet": "Main Wallet",
+    "mainnet-network": "Main network",
     "make-admin": "Make admin",
     "make-moderator": "Make moderator",
     "manage-keys-and-storage": "Manage keys and storage",
@@ -1025,6 +1030,8 @@
     "opening-buy-crypto": "Opening {{site}}...",
     "network": "Network",
     "network-chain": "Network chain",
+    "network-details": "Network details",
+    "network-info": "Network info",
     "network-fee": "Network fee",
     "network-id": "Network ID",
     "network-invalid-network-id": "Specified network id doesn't correspond to network id by RPC url",
@@ -1248,6 +1255,7 @@
     "retry": "Retry",
     "reveal-sync-code": "Reveal sync code",
     "revoke-access": "Revoke access",
+    "rpc-url": "RPC URL",
     "save": "Save",
     "save-address": "Save address",
     "save-bio": "Save bio",
@@ -1330,6 +1338,7 @@
     "specify-name": "Specify a name",
     "specify-symbol": "Specify a symbol",
     "specify-network-id": "Specify network id",
+    "specify-rpc-url": "Specify a RPC URL",
     "start-chat": "Start chat",
     "start-conversation": "Start conversation",
     "start-group-chat": "Start group chat",
@@ -1361,6 +1370,7 @@
     "sign-up": "Sign up",
     "tag-was-lost": "Tag was lost",
     "tap-card-again": "Tap the card to the back of your phone again",
+    "test-networks": "Test networks",
     "text-input-disabled": "Please wait a moment...",
     "this-device": "This device",
     "this-device-desc": "Your keys will be encrypted and securely stored on your device",
@@ -1981,9 +1991,9 @@
     "contact-request": "Contact request",
     "send-contact-request": "Send contact request",
     "contact-request-was-sent": "Contact request sent",
+    "contact-request-was-ignored": "Contact request ignored",
     "contact-request-sent-to": "Contact request sent to",
     "contact-request-was-accepted": "Contact request accepted",
-    "contact-request-was-ignored": "Contact request ignored",
     "contact-request-is-now-a-contact": "is now a contact",
     "contact-request-removed-you-as-contact": "removed you as a contact",
     "contact-request-removed-as-contact": "removed as a contact",
@@ -2060,6 +2070,7 @@
     "shell-placeholder-title": "Your open tabs will be here",
     "shell-placeholder-subtitle": "Jump between your communities, messages,\nwallet accounts and browser tabs",
     "no-pinned-messages-desc": "Just keep pinning, just keep pinning\nWhat do we do? We pin, pin, pin",
+    "no-pinned-messages-community-desc": "Just keep pinning, just keep pinning \nWhat do we do? We pin, pin, pin",
     "invite-friends-to-status": "Invite friends to Status",
     "share-invite-link": "Share an invite link",
     "pending-requests": "Pending requests",
