feat: moved permission-context logic to quo component
Signed-off-by: Cristian Lungu <lungucristian95@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -756,6 +756,7 @@
     "join-open-community": "Join Community",
     "joined-community": "You joined “{{community}}”",
     "join-decentralised-communities": "Join Decentralized Communities",
+    "join-community-to-post": "Join community to post",
     "http-gateway-error": "Oops, request failed!",
     "sign-request-failed": "Could not sign message",
     "simple": "Simple",
@@ -2128,6 +2129,7 @@
     "contact-request-chat-pending": "Your contact request is pending",
     "contact-profile-request-pending": "Contact request pending",
     "contact-request-chat-add": "Add {{name}} as contact to send a message",
+    "contact-request-chat-received": "{{name}} sent you a contact request",
     "join-request": "Join request",
     "join-one-user": "Join {{user}}",
     "join-two-users": "Join {{user1}} and {{user2}}",
