feat: multiple-token-gating and previews
Signed-off-by: Cristian Lungu <lungucristian95@gmail.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -692,6 +692,8 @@
     "history": "History",
     "history-nodes": "Status nodes",
     "hold-card": "Hold card to the back\n of your phone",
+    "hold-to-post-1": "Hold",
+    "hold-to-post-2": "to post",
     "home": "Home",
     "hooks": "Hooks",
     "how-to-scan": "How to scan",
