--- a/translations/en.json
+++ b/translations/en.json
@@ -191,7 +191,7 @@
     "no-addresses-selected": "At least 1 address must be shared with community",
     "confirm-changes": "Confirm changes",
     "airdrop-addresses": "Address for airdrops",
-    "join-as-a": "Join as a {{role}}",
+    "join-as": "Join as {{role}}",
     "all-addresses": "All addresses",
     "for-airdrops": "For airdrops",
     "members-label": "Members",
@@ -2297,6 +2297,7 @@
     "you-eligible-to-join-as": "You’re eligible to join as {{role}}",
     "eligible-to-join-as": "Eligible to join as",
     "you-not-eligible-to-join": "You’re not eligible to join",
+    "you-not-eligible-to-join-as": "You’re not eligible to join as {{role}}",
     "you-hold-number-of-hold-tokens-of-these": "You hold {{number-of-hold-tokens}} of these:",
     "addresses-dont-contain-tokens-needed": "These addresses don’t contain tokens needed to join",
     "you-hodl": "You hodl:",
