All addresses text is not updated when changing accounts

--- a/translations/en.json
+++ b/translations/en.json
@@ -38,6 +38,7 @@
     "add-to-contacts": "Add to contacts",
     "add-to-contacts-text": "By adding a user to your contact list, you share your wallet address",
     "address": "Address",
+    "addresses": "addresses",
     "address-received": "Address received",
     "address-requested": "Address requested",
     "address-request-accepted": "Address request accepted",
