--- a/translations/en.json
+++ b/translations/en.json
@@ -38,7 +38,6 @@
     "add-to-contacts": "Add to contacts",
     "add-to-contacts-text": "By adding a user to your contact list, you share your wallet address",
     "address": "Address",
-    "addresses": "addresses",
     "address-received": "Address received",
     "address-requested": "Address requested",
     "address-request-accepted": "Address request accepted",
@@ -2559,5 +2558,9 @@
     "ledger-live": "Ledger live",
     "keep-key": "KeepKey",
     "type-your-path": "Type your own derivation path",
-    "default-format": "Default format"
+    "default-format": "Default format",
+    "address-count": {
+        "one": "1 address",
+        "other": "{{count}} addresses"
+    }
 }
