--- a/translations/en.json
+++ b/translations/en.json
@@ -2558,5 +2558,9 @@
     "ledger-live": "Ledger live",
     "keep-key": "KeepKey",
     "type-your-path": "Type your own derivation path",
-    "default-format": "Default format"
+    "default-format": "Default format",
+    "address-count": {
+        "one": "1 address",
+        "other": "{{count}} addresses"
+    }
 }
