--- a/translations/en.json
+++ b/translations/en.json
@@ -2562,17 +2562,8 @@
         "one": "1 address",
         "other": "{{count}} addresses"
     },
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "max": "Max: {{number}}"
-=======
-    "key-name-error-1": "Key name too long",
-    "key-name-error-2": "Emojis are not allowed",
-    "key-name-error-3": "Special characters are not allowed",
->>>>>>> ed9f1cb22 (feat: keypair name handling)
-=======
+    "max": "Max: {{number}}",
     "key-name-error-length": "Key name too long",
     "key-name-error-emoji": "Emojis are not allowed",
-    "key-name-error-special-char": "Special characters are not allowed",
->>>>>>> 4cf522471 (review)
+    "key-name-error-special-char": "Special characters are not allowed"
 }
