--- a/translations/en.json
+++ b/translations/en.json
@@ -147,8 +147,13 @@
     "change-passcode": "Change Passcode",
     "change-password": "Change password",
     "change-password-confirm-description": "Your data must now be re-encrypted with your new password. Please do not quit the app or turn off your device.",
-    "change-password-confirm-warning": "This process may take up to 3 min. Closing the app or locking your phone while re-encryption is taking place will lead to data corruption, loss of your Status profile and inability to restart Status.",
+    "change-password-confirm-warning": "Re-encrypting data after changing password may take up to 3 min. Closing the app or locking phone while re-encryption is in progress will lead to data corruption and loss of your Status profile.",
     "change-password-description": "Change password used to log in to Status and sign transactions",
+    "change-password-loading-header": "Keep app open on screen!",
+    "change-password-loading-description": "Data is now being re-encrypted with your new password, this may take up to 3min.",
+    "change-password-done-header": "Re-encryption complete!",
+    "change-password-done-description": "Please log out Status and log in using your new password",
+    "change-password-loading-warning": "Do not quit the app or turn off your device while in-progress.\n \nClosing the app or locking your phone while re-encryption is taking place will lead to data corruption and the loss of your Status profile.",
     "change-password-new-password-label": "New password",
     "change-password-new-password-placeholder": "Enter new password",
     "change-password-old-password-label": "Current password",
