Bottom sheet with save and send options not displayed after scanning wallet QR using universal scanner #18928 (#19250)

--- a/translations/en.json
+++ b/translations/en.json
@@ -2558,6 +2558,7 @@
     "keep-key": "KeepKey",
     "type-your-path": "Type your own derivation path",
     "default-format": "Default format",
+    "send-to-this-address": "Send to this address",
     "address-count": {
         "one": "1 address",
         "other": "{{count}} addresses"
