--- a/translations/en.json
+++ b/translations/en.json
@@ -2458,6 +2458,8 @@
     "edit-wallet-network-preferences-updated-message": "Account network preferences has been updated",
     "search-assets": "Search assets",
     "address-activity": "This address has activity",
+    "address-no-activity": "This address has no activity",
+    "scanning": "Scanning for activity...",
     "keypairs": "Keypairs",
     "keypairs-description": "Select keypair to derive your new account from",
     "confirm-account-origin": "Confirm account origin",
@@ -2481,7 +2483,6 @@
     "est-time": "Est. time",
     "user-gets": "{{name}} gets",
     "slide-to-send": "Slide to send",
-    "this-address-has-activity": "This address has activity",
     "generate-new-keypair": "Generate new keypair",
     "import-using-phrase": "Import using recovery phrase",
     "import-from-keycard": "Import from Keycard",
