--- a/translations/en.json
+++ b/translations/en.json
@@ -1496,7 +1496,7 @@
     "view-gitcoin": "View in Gitcoin",
     "view-members": "View members",
     "view-profile": "View profile",
-    "view-channel-members-and-details": "View channel member and details",
+    "view-channel-members-and-details": "View channel members and details",
     "view-details": "View Details",
     "view-signing": "View signing phrase",
     "view-superrare": "View in SuperRare",
@@ -2573,5 +2573,7 @@
     "key-name-error-emoji": "Emojis are not allowed",
     "key-name-error-special-char": "Special characters are not allowed",
     "display": "Display",
-    "testnet-mode-enabled": "Testnet mode enabled"
+    "testnet-mode-enabled": "Testnet mode enabled",
+    "online-community-member": "Online",
+    "offline-community-member": "Offline"
 }
