--- a/translations/en.json
+++ b/translations/en.json
@@ -154,6 +154,7 @@
     "changed-amount-warning": "Amount was changed from {{old}} to {{new}}",
     "changed-asset-warning": "Asset was changed from {{old}} to {{new}}",
     "channel-on-status": "Channel on Status",
+    "community-on-status": "Community on Status",
     "chaos-mode": "Chaos mode",
     "chaos-unicorn-day": "Chaos Unicorn Day",
     "chaos-unicorn-day-details": "🦄🦄🦄🦄🦄🦄🦄🚀!",
@@ -2574,5 +2575,12 @@
     "display": "Display",
     "testnet-mode-enabled": "Testnet mode enabled",
     "online-community-member": "Online",
-    "offline-community-member": "Offline"
+    "offline-community-member": "Offline",
+    "invite-to-community": "Invite to community",
+    "invite-n-users": "Invite {{count}} users",
+    "invite-1-user": "Invite 1 user",
+    "one-user-was-invited": "1 user was invited",
+    "n-users-were-invited": "{{count}} users were invited",
+    "invite-friend-to-status": "Invite friends to Status",
+    "send-community-link": "Send community link"
 }
