refactor: suggested routes rendering
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/translations/en.json
+++ b/translations/en.json
@@ -2595,5 +2595,6 @@
     "this-account-has-no-activity": "This account has no activity",
     "this-address-has-activity": "This address has activity",
     "scanning-for-activity": "Scanning for activity...",
-    "send-community-link": "Send community link"
+    "send-community-link": "Send community link",
+    "at-least-one-network-must-be-activated": "At least 1 network must be activated"
 }
