--- a/translations/en.json
+++ b/translations/en.json
@@ -2406,6 +2406,7 @@
     "saved": "Saved",
     "no-recent-transactions": "No recent transactions",
     "make-one-it-is-easy-we-promise": "Make one, it’s easy, we promise!",
+    "saved-addresses": "Saved addresses",
     "no-saved-addresses": "No saved addresses",
     "you-like-to-type-43-characters": "You like to type 43 characters?",
     "no-other-accounts": "No other accounts",
@@ -2461,6 +2462,7 @@
     "address-no-activity": "This address has no activity",
     "scanning": "Scanning for activity...",
     "keypairs": "Keypairs",
+    "keypairs-accounts-and-addresses": "Keypairs, accounts and addresses",
     "keypairs-description": "Select keypair to derive your new account from",
     "confirm-account-origin": "Confirm account origin",
     "confirmed-on": "Confirmed on",
