--- a/translations/en.json
+++ b/translations/en.json
@@ -2579,5 +2579,13 @@
     "one-user-was-invited": "1 user was invited",
     "n-users-were-invited": "{{count}} users were invited",
     "invite-friend-to-status": "Invite friends to Status",
-    "send-community-link": "Send community link"
+    "send-community-link": "Send community link",
+    "enter-private-key": "Enter the private key of an address",
+    "enter-private-key-placeholder": "Enter your private key",
+    "import-private-key-info": "New addresses cannot be derived from an account imported from a private key. Import using a seed phrase if you wish to derive addresses.",
+    "invalid-private-key": "It’s not a valid private key",
+    "private-key-public-address": "Public address of private key",
+    "this-account-has-no-activity": "This account has no activity",
+    "this-address-has-activity": "This address has activity",
+    "scanning-for-activity": "Scanning for activity..."
 }
