Refactor: Add address component

--- a/translations/en.json
+++ b/translations/en.json
@@ -2617,5 +2617,6 @@
     "at-least-one-network-must-be-activated": "At least 1 network must be activated",
     "status-is-a-secure-messaging-app": "Status is a secure messaging app, crypto wallet and web3 browser built with the state of the art technology",
     "save-address-description": "Paste, scan or type ETH address or ENS name",
+    "address-or-end-name": "Address or ENS name",
     "address-saved": "Address saved"
 }
