--- a/translations/en.json
+++ b/translations/en.json
@@ -2546,8 +2546,8 @@
     "derivation-path-desc": "Derivation paths are the routes your Status Wallet uses to generate addresses from your private key.",
     "select-networks": "Select networks",
     "generating-keypair": "Generating keypair...",
-    "keypair-name": "Keypair name",
-    "keypair-name-description": "Name keypair for your own personal reference",
+    "keypair-name": "Key pair name",
+    "keypair-name-description": "Name key pair for your own personal reference",
     "keypair-name-input-placeholder": "Collectibles account, Old vault....",
     "goerli-testnet-toggle-confirmation": "Are you sure you want to toggle Goerli? This will log you out and you will have to login again.",
     "bridged-to": "Bridged to {{network}}",
@@ -2582,7 +2582,6 @@
     "one-user-was-invited": "1 user was invited",
     "n-users-were-invited": "{{count}} users were invited",
     "invite-friend-to-status": "Invite friends to Status",
-    "send-community-link": "Send community link",
     "enter-private-key": "Enter the private key of an address",
     "enter-private-key-placeholder": "Enter your private key",
     "import-private-key-info": "New addresses cannot be derived from an account imported from a private key. Import using a seed phrase if you wish to derive addresses.",
@@ -2590,5 +2589,6 @@
     "private-key-public-address": "Public address of private key",
     "this-account-has-no-activity": "This account has no activity",
     "this-address-has-activity": "This address has activity",
-    "scanning-for-activity": "Scanning for activity..."
+    "scanning-for-activity": "Scanning for activity...",
+    "send-community-link": "Send community link"
 }
