--- a/translations/en.json
+++ b/translations/en.json
@@ -1102,7 +1102,8 @@
     "ok-continue": "Okay, continue",
     "ok-got-it": "Okay, got it",
     "okay": "Okay",
-    "on": "On",
+    "on-capitalized": "On",
+    "on": "on",
     "on-the-web": "On the web",
     "only-mentions": "Only @mentions",
     "open": "Open",
