--- a/translations/en.json
+++ b/translations/en.json
@@ -2571,6 +2571,7 @@
     "keypair-name": "Key pair name",
     "keypair-name-description": "Name key pair for your own personal reference",
     "keypair-name-input-placeholder": "Collectibles account, Old vault....",
+    "key-pair-name-updated": "Key pair name updated",
     "goerli-testnet-toggle-confirmation": "Are you sure you want to toggle Goerli? This will log you out and you will have to login again.",
     "bridged-to": "Bridged to {{network}}",
     "slide-to-bridge": "Slide to bridge",
