--- a/translations/en.json
+++ b/translations/en.json
@@ -2629,5 +2629,7 @@
     "status-is-a-secure-messaging-app": "Status is a secure messaging app, crypto wallet and web3 browser built with the state of the art technology",
     "token-not-available-on-receiver-networks": "{{token-symbol}} is not available on the recipient’s desired networks. Proceed with caution.",
     "add-networks-token-can-be-sent-to": "Add networks {{token-symbol}} can be sent to",
-    "not-available": "Not available"
+    "not-available": "Not available",
+    "token-not-available-on-networks": "{{token-symbol}} is not available on {{networks}}.",
+    "sending-to-networks-the-receiver-does-not-prefer": "Sending to networks the receiver does not prefer may result in recipient having difficulty accessing the sent tokens."
 }
