chore: add testnet labels for bottom-sheets

--- a/translations/en.json
+++ b/translations/en.json
@@ -2600,6 +2600,10 @@
     "key-name-error-too-short": "Key pair name must be at least {{count}} characters",
     "display": "Display",
     "testnet-mode": "Testnet mode",
+    "turn-on-testnet-mode": "Turn on testnet mode",
+    "turn-off-testnet-mode": "Turn off testnet mode",
+    "testnet-mode-enable-description": "In this mode, all blockchain data displayed will come from testnets and all blockchain interactions will be with testnets.\nTestnet mode switches the entire app to using testnets only. Please switch this mode on only if you know exactly why you need to use it.",
+    "testnet-mode-disable-description": "Are you sure you want to turn off Testnet mode? All future transactions will be performed on live networks with real funds.",
     "testnet-mode-enabled": "Testnet mode enabled",
     "online-community-member": "Online",
     "offline-community-member": "Offline",
