--- a/translations/en.json
+++ b/translations/en.json
@@ -2307,6 +2307,7 @@
     "sync-devices-complete-sub-title": "Your devices are now in sync",
     "synced-with": "Synced with",
     "confirm-and-leave": "Confirm and leave",
+    "change-testnet-mode-logout-info": "You’ll be logged out of the app",
     "membership-requirements-not-met": "Membership requirements not met",
     "edit-shared-addresses": "Edit shared addresses",
     "leave-community-farewell": "We’ll be sad to see you go but remember, you can come back at any time! All shared addresses will be unshared.",
